# lajeh_api

./: .env  .gitignore  README.html  README.md  alembic.ini  modules.py  pyproject.toml  run.py
lajeh_api/: database.py  main.py  settings.py
lajeh_api/configs/cloudinary/: main.py
lajeh_api/fornecedores/: __init__.py  controllers.py  models.py  repositories.py  schemas.py  services.py
lajeh_api/users/: controllers.py  dependencies.py  models.py  repositories.py  routes.py  schemas.py  services.py
lajeh_api/users/migrations/: env.py
lajeh_api/users/migrations/versions/: 4b222bfa880a_create_users_table.py
